--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -14,5 +14,11 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@koa/router": "^12.0.0",
+    "@types/koa__router": "^12.0.0",
+    "koa": "^2.14.1",
+    "koa-json": "^2.0.2"
   }
 }
