--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/koa-json": "^2.0.20",
+    "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -19,6 +21,7 @@
     "@koa/router": "^12.0.0",
     "@types/koa__router": "^12.0.0",
     "koa": "^2.14.1",
-    "koa-json": "^2.0.2"
+    "koa-json": "^2.0.2",
+    "koa-router": "^12.0.0"
   }
 }
