--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "@types/koa__router": "^12.0.0",
+    "knex": "^2.4.1",
+    "knex-stringcase": "^1.4.6",
     "koa": "^2.14.1",
     "koa-json": "^2.0.2",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "mysql2": "^3.0.1"
   }
 }
