--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "@types/koa__router": "^12.0.0",
+    "@types/lodash": "^4.14.191",
     "knex": "^2.4.1",
     "knex-stringcase": "^1.4.6",
     "koa": "^2.14.1",
+    "koa-body": "^6.0.1",
     "koa-json": "^2.0.2",
     "koa-router": "^12.0.0",
+    "lodash": "^4.17.21",
     "mysql2": "^3.0.1"
   }
 }
