--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.18",
@@ -21,6 +22,8 @@
     "@koa/router": "^12.0.0",
     "@types/koa__router": "^12.0.0",
     "@types/lodash": "^4.14.191",
+    "axios": "^1.2.3",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.1",
     "knex-stringcase": "^1.4.6",
     "koa": "^2.14.1",
