--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -19,8 +19,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
     "@types/koa__router": "^12.0.0",
+    "@types/koa-cors": "^0.0.2",
     "@types/lodash": "^4.14.191",
     "axios": "^1.2.3",
     "jsonwebtoken": "^9.0.0",
