--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/koa__cors": "^3.3.0",
     "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.18",
