--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "cra-template-typescript": "1.2.0",
+    "oidc-client-ts": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-oidc-context": "^2.2.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
