--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.2.3",
     "cra-template-typescript": "1.2.0",
     "oidc-client-ts": "^2.2.1",
     "react": "^18.2.0",
