--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.2",
     "axios": "^1.2.3",
     "cra-template-typescript": "1.2.0",
     "oidc-client-ts": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^2.2.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
