--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -13,8 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^2.2.1",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
-    "react-router-dom": "^6.7.0"
+    "web-vitals": "^3.1.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/xlsx": "^0.0.36",
     "web-vitals": "^3.1.1"
   }
 }
