--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -7,6 +7,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "axios": "^1.2.3",
     "cra-template-typescript": "1.2.0",
     "oidc-client-ts": "^2.2.1",
@@ -44,7 +51,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/xlsx": "^0.0.36",
-    "web-vitals": "^3.1.1"
+    "@types/xlsx": "^0.0.36"
   }
 }
