--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@mui/system": "^5.11.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.3",
+    "antd": "^5.1.2",
     "cra-template-typescript": "1.2.0",
     "oidc-client-ts": "^2.2.1",
     "react": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-oidc-context": "^2.2.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^3.1.1",
     "xlsx": "^0.18.5"
   },
